# event_feedback

./: Cargo.toml  README.md
migrations/2018-01-20-141613_create_events/: down.sql  up.sql
migrations/2018-01-20-171550_create_feedback/: down.sql  up.sql
src/: admin.rs  event.rs  feedback.rs  lib.rs  macros.rs  main.rs  postgres.rs  schema.rs
tests/: api.rs
