[package]
name = "event_feedback"
version = "0.1.0"
authors = ["Aaron Power <theaaronepower@gmail.com>"]

[dependencies]
dotenv = "0.10"
lazy_static = "1"
log = "0.4"
openssl-probe = "0.1.2"
publicsuffix = "1.4"
ring = "0.11"
rand = "0.4"
rocket = "0.3"
rocket_codegen = "0.3"
r2d2 = "0.8"
r2d2-diesel = "1.0.0-beta1"
diesel_infer_schema = { version = "1.0.0-beta1", features = ["postgres"] }
uuid = { version = "0.5", features = ["v4", "serde"] }
serde = "1"
serde_derive = "1"
serde_json = "1"

[dependencies.diesel]
version = "1.0.0-beta1"
features = ["postgres", "uuid"]
